# okftool

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/okflint-cli/: Cargo.toml
crates/okflint-cli/src/: main.rs
crates/okflint-cli/tests/: cli.rs
crates/okflint-core/: Cargo.toml
crates/okflint-core/src/: bundle.rs  config.rs  lib.rs  links.rs  model.rs  parse.rs  validate.rs
crates/okflint-core/src/lint/: mod.rs  rules.rs
crates/okflint-core/tests/: cases.rs  fixtures.rs  golden.rs  lint.rs  presets_doc.rs  validate.rs
crates/okflint-wasm/: Cargo.toml
crates/okflint-wasm/src/: lib.rs
crates/okftool-cli/: Cargo.toml
crates/okftool-cli/src/: main.rs
crates/okftool-cli/tests/: cli.rs
crates/okftool-core/: Cargo.toml
crates/okftool-core/presets/: okf-minimal.yaml  okf-recommended.yaml  okf-strict.yaml
crates/okftool-core/src/: config.rs  lib.rs  links.rs  model.rs  parse.rs
crates/okftool-core/src/lint/: mod.rs  rules.rs
crates/okftool-core/tests/: cases.rs  fixtures.rs  golden.rs  lint.rs  presets_doc.rs  validate.rs
crates/okftool-wasm/: Cargo.toml
crates/okftool-wasm/src/: lib.rs
docs/: README.md
docs/okf/: .okftool.yaml  index.md
docs/okf/architecture/: cli.md  core.md  index.md  overview.md  wasm.md
docs/okf/reference/: configuration.md  index.md  profiles.md  validation.md
docs/okf/reference/rules/: body-not-empty.md  bridging-ratio.md  consistent-type-casing.md  declare-hubs.md  index-entry-has-description.md  index.md  log-newest-first.md  max-out-degree.md  min-local-cohesion.md  no-alienated-concepts.md  no-complete-neighborhood-clique.md  no-dangling-links.md  no-empty-frontmatter-values.md  no-excessive-bridging.md  no-leaf-bridge-fanout.md  no-noisy-edges.md  no-orphan-concepts.md  no-relative-links.md  no-self-link.md  no-singleton-type.md  no-unindexed-concepts.md  prefer-absolute-links.md  prefer-neighborhood-index-link.md  require-bridge-prose.md  require-description.md  require-timestamp.md  structural-body.md  taxonomy.md  timestamp-iso8601.md  types-from-allowlist.md
fixtures/: README.md
fixtures/cases/all-rules/: index.md
fixtures/cases/all-rules/concepts/: details.md  lonely.md  messy.md  overview.md  stale.md  table-a.md  table-b.md
fixtures/cases/bad-timestamp/concepts/: a.md
fixtures/cases/dangling-link/concepts/: a.md
fixtures/cases/empty-body/concepts/: a.md
fixtures/cases/empty-values/concepts/: a.md
fixtures/cases/hub-overflow/concepts/: hub.md  t1.md  t2.md  t3.md
fixtures/cases/index-entry-no-desc/: index.md
fixtures/cases/index-entry-no-desc/concepts/: a.md
fixtures/cases/log-order/: log.md
fixtures/cases/missing-frontmatter/concepts/: a.md
fixtures/cases/missing-type/concepts/: a.md
fixtures/cases/orphan-concept/concepts/: b.md  lonely.md
fixtures/cases/prose-wall/concepts/: a.md
fixtures/cases/relative-links/concepts/: a.md
fixtures/cases/self-link/concepts/: a.md
fixtures/cases/singleton-type/concepts/: a.md  b.md
fixtures/cases/sparse-frontmatter/concepts/: a.md
fixtures/cases/type-casing/concepts/: gadget.md  widget.md
fixtures/cases/unindexed/: index.md
fixtures/minimal/: index.md
fixtures/minimal/concepts/: thing.md
presets/: okf-minimal.yaml  okf-strict.yaml
scripts/: build-npm-package.sh  publish-crates.sh
