[workspace]
resolver = "2"
members = ["crates/okftool-core", "crates/okftool-cli", "crates/okftool-wasm"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ryansann/okftool"
homepage = "https://github.com/ryansann/okftool"
authors = ["ryansann"]
rust-version = "1.82"
keywords = ["okf", "knowledge", "linter", "validator", "markdown"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml is archived but stable and ubiquitous; revisit if a maintained fork
# (serde_norway) becomes necessary.
serde_yaml = "0.9"
regex = "1"
globset = "0.4"

# Smaller, faster release binaries for the CLI.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
