[package]
name = "okflint-cli"
description = "okflint — validate and lint OKF bundles from the command line."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "okflint"
path = "src/main.rs"

[dependencies]
okflint-core = { path = "../okflint-core" }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
