[package]
name = "okflint-core"
description = "Core OKF parser, spec validator, and lint engine for okflint."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "okflint_core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
