[package]
name = "okflint-wasm"
description = "WebAssembly bindings for okflint-core (the okflint npm package)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
okflint-core = { path = "../okflint-core" }
serde = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# rustc's wasm target now emits reference-types/multivalue, which the wasm-opt
# bundled with wasm-pack can't yet validate. Skip the optimization pass for now;
# re-enable once we run a current Binaryen in CI.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
