[package]
name = "okftool-core"
description = "Core OKF parser, spec validator, and lint engine for okftool."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[lib]
name = "okftool_core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
