[package]
name = "okftool-wasm"
description = "WebAssembly bindings for okftool-core (the @ryansann/okftool npm package)."
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/ryansann/okftool"
homepage = "https://github.com/ryansann/okftool"
rust-version.workspace = true
# Published to npm (via wasm-pack), not crates.io.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
okftool-core = { path = "../okftool-core", version = "0.2.3" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# rustc's wasm target now emits reference-types/multivalue, which the wasm-opt
# bundled with wasm-pack can't yet validate. Skip the optimization pass for now;
# re-enable once we run a current Binaryen in CI.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
